# arbok

./: .gitattributes  .gitignore  CMakeLists.txt  README  README.md  contraction.txt  dependencies.sh
.github/workflows/: test.yml
data/: Makefile  antilemon.py  benchmark.py  check_datasets.py  fastestspeedrun_convert.py  fastestspeedrun_download.py  girgs_convert.py  girgs_generate.py  konect_download_directed.py  konect_extrac_convert.py  make_archive.sh  networkrepository_download_networks.sh  networkrepository_filter_convert.py  plots.ipynb  quick_bench.py  solution_testbench.py  sources.txt
data/20220412_results/: log  runtime-antilemon.csv  runtime-fastestspeedrun.csv  runtime-konect.csv  runtime-networkrepository.csv  runtime-yosupo.csv
data/20220413_results/: log  runtime-antilemon.csv  runtime-fastestspeedrun.csv  runtime-girgs.csv  runtime-konect.csv  runtime-networkrepository.csv  runtime-yosupo.csv
data/20220414_results/: girgs_log  log  runtime-antilemon.csv  runtime-fastestspeedrun.csv  runtime-girgs.csv  runtime-konect.csv  runtime-networkrepository.csv  runtime-yosupo.csv
source/: CMakeLists.txt
source/apps/: CMakeLists.txt  arbok-cli.cpp  compprog1.cpp  compprog2.cpp  fastestspeedrun.cpp  fastestspeedrun2.cpp  gabow_test.cpp  josupo_generator.cpp  libcheck.cpp  sandbox.cpp  tarjan_matrix.cpp  tarjan_smallerintolarger.cpp
source/arbok/: CMakeLists.txt  cf_solution.cpp  dsu.cpp  gabow.cpp  tarjan.cpp  tarjan_impl.h  tarjan_matrix.cpp  tarjan_pq.cpp  tarjan_set.cpp  tarjan_treap.cpp  treap.cpp
source/arbok/include/arbok/: cf_solution.h  dsu.h  gabow.h  graph.h  paths.h.in  tarjan.h  treap.h
source/arbok/include/arbok/data_structures/: active_forest.h  activeset.h  compressed_tree.h  compressed_tree.inl  dsu.h  edgelink.h  fibheap.h  hollow_heap.h  treap.h
source/arbok/include/arbok/gabow/: active_forest.h  edgelink.h  gabow.h
source/arbok/include/arbok/others/: felerius.h  spaghetti.h  yosupo.h
source/arbok/include/arbok/tarjan/: impl.h  tarjan.h  tarjan_base.h  tarjan_hollow.h  tarjan_matrix.h  tarjan_pq.h  tarjan_set.h  tarjan_treap.h
source/arbok/include/arbok/utils/: cf_solution.h  paths.h.in  utils.h
source/arbok/src/data_structures/: active_forest.cpp  activeset.cpp  dsu.cpp  dummy_active_set.cpp  fibheap_active_set.cpp  treap.cpp
source/arbok/src/gabow/: active_forest.cpp  gabow.cpp
source/arbok/src/tarjan/: tarjan.cpp  tarjan_hh.cpp  tarjan_matrix.cpp  tarjan_pq.cpp  tarjan_set.cpp  tarjan_treap.cpp
source/arbok/src/utils/: cf_solution.cpp  utils.cpp
source/atofigh_adapter/: CMakeLists.txt  atofigh.cpp  edmonds_optimum_branching_impl.hpp
source/atofigh_adapter/include/arbok/others/: atofigh.h
source/lemon_adapter/: CMakeLists.txt  lemon.cpp
source/lemon_adapter/include/arbok/lemon/: lemon.h
source/lemon_adapter/include/arbok/others/: lemon.h
source/tests/: CMakeLists.txt  test_compressed_tree.cpp  test_fastestspeedrun.cpp  test_fheap.cpp  test_find_data.cpp  test_gabow.cpp  test_pqactiveset.cpp
